# Thesis_SlidingWindow

./: .gitignore  README.md  pyproject.toml
docs/: USAGE.md
notebooks/Fish/: Fish_knn_tuning_comparison.ipynb  Fish_minirocket_tuning_comparison.ipynb  Fish_overall_results.ipynb  Fish_timeseriesforest_tuning_comparison.ipynb  Fish_weasel_tuning_comparison.ipynb
scripts/: plot_fish_overall.py  plot_results.py  run_best_hyperparameters.py  run_experiment.py  tune_classifier.py  tune_per_configuration.py
src/: classifiers.py  data_loader.py  windowing.py
src/sliding_window_tsc/: __init__.py  classifiers.py  data_loader.py  experiment.py  hyperparameters_search_space.py  metrics.py  plotting.py  tuning.py  utils.py  windowing.py
tests/: test_classifiers.py  test_windowing.py
